syntax = "proto3";

option csharp_namespace = "Camera";

package camera;

service Camera {
  rpc GetFrame (NotifyRequest) returns (NotifyResponse);
}

message NotifyRequest {
}

message NotifyResponse {
  bytes frame = 1;
  string camera = 2;
}

